[gd_scene load_steps=14 format=3 uid="uid://cukchswh5wnsm"]

[ext_resource type="AudioStream" uid="uid://ba3h8ohvdverh" path="res://audio/music/OnDeath.ogg" id="1"]
[ext_resource type="Script" path="res://scripts/Globals/Main.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cl1rdgbn6xqel" path="res://graphics/UI/GameOver.png" id="3"]
[ext_resource type="PackedScene" uid="uid://cff71jgrihiyg" path="res://rooms/Menu/Title.tscn" id="4"]
[ext_resource type="AudioStream" uid="uid://bsxtatqrpn35w" path="res://audio/music/GuyRock.ogg" id="5"]

[sub_resource type="Animation" id="1"]
resource_name = "FadeIn"
length = 0.01
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ScreenGhost:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wr6nx"]
_data = {
"FadeIn": SubResource("1")
}

[sub_resource type="Animation" id="2"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColourOverlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="3"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColourOverlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y3s34"]
_data = {
"FadeIn": SubResource("2"),
"FadeOut": SubResource("3")
}

[sub_resource type="Animation" id="4"]
resource_name = "GameOver"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOver:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Music:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TextureRect:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="5"]
resource_name = "Resume"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOver:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Music:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dpspr"]
_data = {
"GameOver": SubResource("4"),
"Resume": SubResource("5")
}

[node name="Main" type="Node2D"]
script = ExtResource("2")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5")
autoplay = true
bus = &"Music"

[node name="SceneLoader" type="Node" parent="."]

[node name="Title" parent="SceneLoader" instance=ExtResource("4")]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ColourOverlay" type="ColorRect" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0)

[node name="ScreenGhost" type="TextureRect" parent="HUD"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
stretch_mode = 3

[node name="FadeGhost" type="AnimationPlayer" parent="HUD"]
libraries = {
"": SubResource("AnimationLibrary_wr6nx")
}

[node name="ScreenFades" type="AnimationPlayer" parent="HUD"]
libraries = {
"": SubResource("AnimationLibrary_y3s34")
}

[node name="Counters" type="Label" parent="HUD"]
offset_left = 657.891
offset_top = 9.24267
offset_right = 706.891
offset_bottom = 45.2427
text = "Time :
Death :"

[node name="Time" type="Label" parent="HUD/Counters"]
layout_mode = 0
offset_left = 53.0
offset_top = 1.07319
offset_right = 109.0
offset_bottom = 15.0732
text = "00:00:00.00"

[node name="Death" type="Label" parent="HUD/Counters"]
layout_mode = 0
offset_left = 53.0
offset_top = 17.6004
offset_right = 109.0
offset_bottom = 31.6004
text = "0"

[node name="GameOver" type="CanvasLayer" parent="."]
layer = 50

[node name="GameOverText" type="AnimationPlayer" parent="GameOver"]
libraries = {
"": SubResource("AnimationLibrary_dpspr")
}

[node name="GameOver" type="AudioStreamPlayer" parent="GameOver"]
stream = ExtResource("1")
bus = &"Music"

[node name="TextureRect" type="TextureRect" parent="GameOver"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -378.5
offset_top = -79.0
offset_right = 378.5
offset_bottom = 79.0
texture = ExtResource("3")
